<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">


    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine|text" />

    <CheckBox
        android:id="@+id/cb_idea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_description"
        android:layout_marginTop="20dp"
        android:text="@string/idea_checkbox" />

    <CheckBox
        android:id="@+id/cb_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_idea"
        android:layout_marginTop="20dp"
        android:text="@string/todo_checkbox" />

    <CheckBox
        android:id="@+id/cb_important"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_todo"
        android:layout_marginTop="20dp"
        android:text="@string/important_checkbox" />

    <Button
        android:id="@+id/btn_cancel"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_important"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/btn_ok"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_cancel"
        android:layout_marginStart="58dp"
        android:layout_toEndOf="@id/btn_cancel"
        android:text="@string/ok_button" />


</RelativeLayout>